--- a/src/main/resources/editor.html
+++ b/src/main/resources/editor.html
@@ -15,11 +15,7 @@
             <div class="styles">
 
                 <div class="style-item">
-                    <!-- 样式预览图-->
-                    <div class="item-box bannerItem" th:each="${style:styleList}" data-styleId="*{style.id}">
-                    <img src="*{style.thumbnail}"/>
-                    <p></p>
-                    </div>
+
                 </div>
             </div>
         </div>
@@ -29,8 +25,8 @@
             </h3>
             <div class="images">
                 <div class="buttons">
-                        <label for="file1"><img src="img/sd03.png" /></label>
-                        <input type="image" class="imgfile" id="file1" name="file"  accept="image/*"
+                        <label for="picCarouselFile1"><img src="img/sd03.png" w:src="img/sd03.png" /></label>
+                        <input type="image" class="imgfile" id="picCarouselFile1" name="file"  accept="image/*"
                                style="position:absolute;clip:rect(0 0 0 0);"/>
                 </div>
                 <ul class="upload-img list-unstyled imagesUl1" >
@@ -43,8 +39,8 @@
             </h3>
             <div class="images">
                 <div class="buttons">
-                    <label for="file2"><img src="img/sd03.png"/></label>
-                    <input type="image" class="imgfile" id="file2" name="file" accept="image/*"
+                    <label for="picCarouselFile2"><img src="img/sd03.png" w:src="img/sd03.png" /></label>
+                    <input type="image" class="imgfile" id="picCarouselFile2" name="file" accept="image/*"
                            style="position:absolute;clip:rect(0 0 0 0);"/>
                 </div>
                 <ul class="upload-img list-unstyled imagesUl2" >
