--- a/src/main/resources/editor.html
+++ b/src/main/resources/editor.html
@@ -14,13 +14,13 @@
 
             <div class="styles">
 
-                <div class="style-item">
-                    <!-- 样式预览图-->
-                    <div class="item-box bannerItem" th:each="${style:styleList}" data-styleId="*{style.id}">
-                    <img src="*{style.thumbnail}"/>
-                    <p></p>
-                    </div>
-                </div>
+                <!--<div class="style-item">-->
+                    <!--&lt;!&ndash; 样式预览图&ndash;&gt;-->
+                    <!--<div class="item-box bannerItem" th:each="${style:styleList}" data-styleId="*{style.id}">-->
+                    <!--<img src="*{style.thumbnail}"/>-->
+                    <!--<p></p>-->
+                    <!--</div>-->
+                <!--</div>-->
             </div>
         </div>
         <div>
