--- a/src/main/resources/editor.html
+++ b/src/main/resources/editor.html
@@ -1,5 +1,15 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<div id="configuration" style="display:block;">
+<script>
+    $(function () {
+        $(".editor").click(function () {
+            alert('click me');
+            var properties = widgetProperties(this);
+            properties[count] =1;
+        })
+    });
+    alert("opened");
+</script>
+<div class="editor" style="display:block;">
     <div class="conf-header">
         <p>设置</p>
         <button class="btn btn-danger" id="cancelBtn">取消</button>
