添加控件样式的浏览视图测试

--- a/src/main/resources/editor.html
+++ b/src/main/resources/editor.html
@@ -110,7 +110,7 @@
             </h3>
             <div class="images">
                 <div class="buttons">
-                        <label for="picCarouselFile1"><img src="img/sd03.png" w:src="img/sd03.png" /></label>
+                        <label for="picCarouselFile1"><img cms:src="img/sd03.png" /></label>
                         <input type="image" class="imgfile" id="picCarouselFile1" name="file"  accept="image/*"
                                style="position:absolute;clip:rect(0 0 0 0);"/>
                 </div>
@@ -124,7 +124,7 @@
             </h3>
             <div class="images">
                 <div class="buttons">
-                    <label for="picCarouselFile2"><img src="img/sd03.png" w:src="img/sd03.png" /></label>
+                    <label for="picCarouselFile2"><img  cms:src="img/sd03.png" /></label>
                     <input type="image" class="imgfile" id="picCarouselFile2" name="file" accept="image/*"
                            style="position:absolute;clip:rect(0 0 0 0);"/>
                 </div>
