删除注释，更新编辑器视图

--- a/src/main/resources/editor.html
+++ b/src/main/resources/editor.html
@@ -1,26 +1,18 @@
-<div class="editor" style="display:block;" xmlns:th="http://www.thymeleaf.org">
-    <!--编辑视图-->
-    <div class="imagesDiv">
-        <h3>
-            <i class="icon-puzzle"></i><b></b>选择图片1920x540
-        </h3>
-        <div class="images">
-            <div id="maxImg">
-
+<div class="borderBoxs">
+    <form class="form-horizontal">
+        <div class="form-group">
+            <label class="col-sm-3 control-label">选择图片 - 宽度1920</label>
+            <div class="col-sm-9 oneImage">
+                <div class="imageUpload" id="maxImg"></div>
             </div>
         </div>
-
-        <h3>
-            <i class="icon-puzzle"></i><b></b>选择图片1200x540
-        </h3>
-        <div class="images">
-            <div id="minImg">
-
+        <div class="form-group">
+            <label class="col-sm-3 control-label">选择图片- 宽度1200</label>
+            <div class="col-sm-9 oneImage">
+                <div class="imageUpload" id="minImg"></div>
             </div>
         </div>
-
-    </div>
-    <!--/编辑视图-->
+    </form>
 </div>
 
 
