添加编辑器浏览测试

--- a/src/main/resources/editor.html
+++ b/src/main/resources/editor.html
@@ -1,13 +1,13 @@
 <div class="borderBoxs">
     <form class="form-horizontal">
         <div class="form-group">
-            <label class="col-sm-3 control-label">选择图片 - 宽度1920</label>
+            <label class="col-sm-3 control-label">选择大图 - 宽度1920</label>
             <div class="col-sm-9 oneImage">
                 <div class="imageUpload" id="maxImg"></div>
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-3 control-label">选择图片- 宽度1200</label>
+            <label class="col-sm-3 control-label">选择小图- 宽度1200</label>
             <div class="col-sm-9 oneImage">
                 <div class="imageUpload" id="minImg"></div>
             </div>
